k8s/postgresql-clusters/postgres-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgresql
  labels:
    pod-security.kubernetes.io/enforce: privileged
